Test live channel

--- a/.github/workflows/deploy-ohif-v3-with-add-ons.yml
+++ b/.github/workflows/deploy-ohif-v3-with-add-ons.yml
@@ -51,7 +51,8 @@ jobs:
           expires: 30d
           projectId: viewers-sandbox-gha-testing
           entryPoint: ./ViewersV3
-          channelId: 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'
+          channelId: live 
+          # channelId: # 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'
 
 # name: Build and Deploy
 
