--- a/.github/workflows/deploy-ohif-v3-with-add-ons.yml
+++ b/.github/workflows/deploy-ohif-v3-with-add-ons.yml
@@ -14,33 +14,34 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
       
-      - name: Clone and install dependencies for ViewersV3
+      - name: Clone and install OHIF dependencies
         run: |
           git clone https://github.com/ImagingDataCommons/ViewersV3.git
           cd ViewersV3
           yarn install --frozen-lockfile
 
-      - name: Clone and install dependencies for ohif-gcp-mode
+      - name: Clone and install ohif-gcp-mode dependencies
         run: |
           git clone https://github.com/ImagingDataCommons/ohif-gcp-mode.git
           cd ohif-gcp-mode
           yarn install --frozen-lockfile
           yarn link
 
-      - name: Clone and install dependencies for ohif-gcp-extension
+      - name: Clone and install ohif-gcp-extension dependencies
         run: |
           git clone https://github.com/ImagingDataCommons/ohif-gcp-extension.git
           cd ohif-gcp-extension
           yarn install --frozen-lockfile
           yarn link
 
-      - name: Link repos and build ViewersV3
+      - name: Link ohif-gcp-mode and ohif-gcp-extension to OHIF and build
         run: |
           cd ViewersV3
-          wget -O ./firebase.json "${{ vars.FIREBASE_JSON_URL }}"
+          echo "${{ vars.OHIF_FIREBASE_JSON }}" > ./firebase.json
+          echo "${{ vars.OHIF_CONFIG_JSON }}" > ./platform/app/public/config/test.js
           yarn link ohif-gcp-mode
           yarn link ohif-gcp-extension
-          yarn build
+          PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0.7.1
