--- a/.github/workflows/deploy-slim.yml
+++ b/.github/workflows/deploy-slim.yml
@@ -14,17 +14,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
 
-      - name: Clone and install dependencies for SLIM
+      - name: Clone and install SLIM dependencies
         run: |
           git clone https://github.com/ImagingDataCommons/slim.git
           cd slim
           yarn install --frozen-lockfile
 
-      - name: build slim
+      - name: Build slim
         run: |
           cd slim
-          wget -O ./firebase.json "${{ vars.SLIM_FIREBASE_JSON_URL }}"
-          yarn build
+          echo "${{ secrets.SLIM_FIREBASE_JSON }}" > ./firebase.json
+          echo "${{ secrets.SLIM_CONFIG_JSON }}" > ./public/config/test.json
+          REACT_APP_CONFIG=test PUBLIC_URL=/ yarn build
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0.7.1
