--- a/.github/workflows/deploy-ohif-v3.yml
+++ b/.github/workflows/deploy-ohif-v3.yml
@@ -14,17 +14,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
       
-      - name: Clone and install dependencies for ViewersV3
+      - name: Clone and install OHIF dependencies
         run: |
           git clone https://github.com/ImagingDataCommons/ViewersV3.git
           cd ViewersV3
           yarn install --frozen-lockfile
 
-      - name: build ViewersV3
+      - name: Build OHIF
         run: |
           cd ViewersV3
-          wget -O ./firebase.json "${{ vars.FIREBASE_JSON_URL }}"
-          yarn build
+          echo "${{ vars.OHIF_FIREBASE_JSON }}" > ./firebase.json
+          echo "${{ vars.OHIF_CONFIG_JSON }}" > ./platform/app/public/config/test.js
+          PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
 
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0.7.1
