--- a/.github/workflows/deploy-slim.yml
+++ b/.github/workflows/deploy-slim.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build slim
         run: |
           cd slim
-          echo "${{ secrets.SLIM_FIREBASE_JSON }}" > ./firebase.json
-          echo "${{ secrets.SLIM_CONFIG_JSON }}" > ./public/config/test.json
+          echo "${{ vars.SLIM_FIREBASE_JSON }}" > ./firebase.json
+          echo "${{ vars.SLIM_CONFIG_JSON }}" > ./public/config/test.json
           REACT_APP_CONFIG=test PUBLIC_URL=/ yarn build
 
       - name: Deploy to Firebase
