--- a/.github/workflows/deploy-ohif-v3-with-add-ons.yml
+++ b/.github/workflows/deploy-ohif-v3-with-add-ons.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd ViewersV3
           echo "${{ vars.OHIF_FIREBASE_JSON }}" > ./firebase.json
-          echo "${{ vars.OHIF_CONFIG_JSON }}" > ./platform/app/public/config/test.js
+          echo "${{ vars.OHIF_CONFIG_JS }}" > ./platform/app/public/config/test.js
           yarn link ohif-gcp-mode
           yarn link ohif-gcp-extension
           PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
