--- a/.github/workflows/deploy-slim.yml
+++ b/.github/workflows/deploy-slim.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build slim
         run: |
           cd slim
-          echo "${{ vars.SLIM_FIREBASE_JSON }}" > ./firebase.json
+          echo "${{ fromJson(vars.SLIM_FIREBASE_JSON) }}" > ./firebase.json
           echo "${{ vars.SLIM_CONFIG_JS }}" > ./public/config/test.js
           REACT_APP_CONFIG=test PUBLIC_URL=/ yarn build
 
