--- a/.github/workflows/deploy-ohif-v3.yml
+++ b/.github/workflows/deploy-ohif-v3.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build OHIF
         run: |
           cd ViewersV3
-          echo "${{ fromJson(vars.OHIF_FIREBASE_JSON) }}" > ./firebase.json
+          echo "${{ vars.OHIF_FIREBASE_JSON }}" > ./firebase.json
           echo "${{ vars.OHIF_CONFIG_JS }}" > ./platform/app/public/config/test.js
           PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
 
