--- a/.github/workflows/deploy-ohif-v3.yml
+++ b/.github/workflows/deploy-ohif-v3.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build OHIF
         run: |
           cd ViewersV3
-          echo "${{ vars.OHIF_FIREBASE_JSON }}" > ./firebase.json
-          echo "${{ vars.OHIF_CONFIG_JS }}" > ./platform/app/public/config/test.js
+          wget -O ./firebase.json "${{ vars.OHIF_FIREBASE_JSON_URL }}"
+          wget -O ./platform/app/public/config/test.js "${{ vars.OHIF_CONFIG_JS_URL }}"
           PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
 
       - name: Deploy to Firebase
