--- a/.github/workflows/deploy-with-dmv.yml
+++ b/.github/workflows/deploy-with-dmv.yml
@@ -40,8 +40,8 @@ jobs:
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-          expires: 30d
-          projectId: viewers-sandbox-gha-testing
+          expires: 5d
+          projectId: "${{ vars.FIREBASE_PROJECT_ID }}"
           entryPoint: ./slim
           channelId: live
           # channelId: # 'pr-${{ github.event.number }}-${{ github.event.pull_request.head.ref }}'
