update no addons to use 3.9.3

--- a/.github/workflows/deploy-ohif-v3-upstream.yml
+++ b/.github/workflows/deploy-ohif-v3-upstream.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           git clone https://github.com/OHIF/Viewers.git
           cd Viewers
+          git checkout v3.9.3
           yarn install --frozen-lockfile
 
       - name: Build OHIF
