--- a/.github/workflows/deploy-ohif-v3-upstream-with-add-ons.yml
+++ b/.github/workflows/deploy-ohif-v3-upstream-with-add-ons.yml
@@ -21,25 +21,18 @@ jobs:
           git checkout v3.9.3
           yarn install --frozen-lockfile
 
-      - name: Clone and install ohif-gcp-mode dependencies
+      - name: Clone and install ohif-secondary-dicomweb-extension dependencies
         run: |
-          git clone https://github.com/ImagingDataCommons/ohif-gcp-mode.git
-          cd ohif-gcp-mode
+          git clone https://github.com/fedorov/ohif-secondary-dicomweb-extension.git
+          cd ohif-secondary-dicomweb-extension
           yarn install --frozen-lockfile
 
-      - name: Clone and install ohif-gcp-extension dependencies
-        run: |
-          git clone https://github.com/ImagingDataCommons/ohif-gcp-extension.git
-          cd ohif-gcp-extension
-          yarn install --frozen-lockfile
-
-      - name: Link ohif-gcp-mode and ohif-gcp-extension to OHIF and build
+      - name: Link ohif-secondary-dicomweb-extension to OHIF and build
         run: |
           cd Viewers
           wget -O ./firebase.json "${{ vars.OHIF_FIREBASE_JSON_URL }}"
           wget -O ./platform/app/public/config/test.js "${{ vars.OHIF_CONFIG_JS_URL }}"
-          yarn cli link-mode ../ohif-gcp-mode
-          yarn cli link-extension ../ohif-gcp-extension
+          yarn cli link-extension ../ohif-secondary-dicomweb-extension
           PUBLIC_URL=/ APP_CONFIG=config/test.js yarn build
 
       - name: Deploy to Firebase
