--- a/.github/workflows/deploy-ohif-v3-upstream-with-add-ons.yml
+++ b/.github/workflows/deploy-ohif-v3-upstream-with-add-ons.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git clone https://github.com/OHIF/Viewers.git
           cd Viewers
-          git checkout v3.9.3
+          git checkout fix/3p11-recovery1
           yarn install --frozen-lockfile
 
       - name: Clone and install ohif-secondary-dicomweb-extension dependencies
